Fix input size UI alignment error

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ nav ul li a {
 }
 
 form input[type=text] {
-  width: 45%;
+  width: 35%;
 }
 
 .user-profile {
